--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,12 +12,12 @@
     
     <div id="internships">
         <h3>Your Internships</h3>
-        <form action="{{ url_for('request_internship') }}" method="get">
+        <form action="{{ url_for('add_new_internship') }}" method="get">
             <button type="submit">Request Internship</button>
         </form>
         <ul>
             {% for internship in internships %}
-                <li>{{ internship.organization }}</li>
+                <li>{{ internship.organization }} status: {{ internship.status }}</li>
             {% endfor %}
 
         </ul>
