--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,7 +17,7 @@
         </form>
         <ul>
             {% for internship in internships %}
-                <li>{{ internship.organization }} status: {{ internship.status }}</li>
+                <li> <button disabled> {{ internship.organization }}</button> status: {{ internship.status }}</li>
             {% endfor %}
 
         </ul>
