--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <form action="{{ url_for('index') }}" method="post">
         <button type="submit" name="redirect_button" value="login">Already Have an account</button>
         <button type="submit" name="redirect_button" value="register">Create New Account</button>
+        <button type="submit" name="redirect_button" value="login_incharge">Login as Incharge</button>
     </form>
 </body>
 </html>
