--- a/templates/login.html
+++ b/templates/login.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <style>
+        form{
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Login</h1>
+    
     <form action="{{ url_for('login') }}" method="post">
+        <h1>Login</h1>
         <label for="">PRN Number: </label>
         <input type="number" name="prn">
-
+        <br>
         <label for="">Password</label>
         <input type="password" name="password">
-
+        <br>
         <input type="submit" value="Login">
     </form>
 </body>
