student folder creation functionality added for signature upload

--- a/templates/set_password.html
+++ b/templates/set_password.html
@@ -7,9 +7,17 @@
 </head>
 <body>
     <h1>Hello {{ name }}</h1>
-    <form action="{{ url_for('set_password') }}" method="post">
+    <form action="{{ url_for('set_password') }}" method="post" enctype="multipart/form-data">
+
+        <label for="username">Create a username:</label>
+        <input type="text" name="username" id="username">
+
         <label for="">Set Your Password Here:</label>
         <input type="password" name="password">
+
+        <label for="signature">Your Signature:</label>
+        <input type="file" id="file" name="file" accept="image/*"><br>
+
         <input type="submit" value="Login">
     </form>
     
