Styling for Login and Register added

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='index.css') }}">
     <title>Document</title>
 </head>
 <body>
-    <form action="{{ url_for('index') }}" method="post">
-        <button type="submit" name="redirect_button" value="login">Already Have an account</button>
-        <button type="submit" name="redirect_button" value="register">Create New Account</button>
-        <button type="submit" name="redirect_button" value="login_incharge">Login as Incharge</button>
+    <!-- <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo"> -->
+    <form action="{{ url_for('index') }}" method="post" >
+        <button type="submit" name="redirect_button" value="login" class="indexbuttons">Already Have an account</button>
+        <button type="submit" name="redirect_button" value="register" class="indexbuttons">Create New Account</button>
+        <button type="submit" name="redirect_button" value="login_incharge" class="indexbuttons">Login as Incharge</button>
     </form>
 </body>
 </html>
