--- a/templates/login.html
+++ b/templates/login.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
     <title>Login</title>
-    <style>
-        form{
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-    </style>
-</head>
-<body>
-    
-    <form action="{{ url_for('login') }}" method="post">
+  
+  </head>
+  <body>
+    <div class="content">
+      <form action="{{ url_for('login') }}" method="post">
         <h1>Login</h1>
-        <label for="">PRN Number: </label>
-        <input type="number" name="prn">
-        <br>
-        <label for="">Password</label>
-        <input type="password" name="password">
-        <br>
-        <input type="submit" value="Login">
-    </form>
-</body>
+        <div class="fillups" id="fillup1">
+          <label for="">PRN Number: </label>
+          <input type="number" name="prn" class="inputs" />
+        </div>
+        <br />
+        <div class="fillups">
+          <label for="">Password</label>
+          <input type="password" name="password" class="inputs" />
+        </div>
+        <br />
+        <input type="submit" value="Login" class="button" />
+      </form>
+    </div>
+  </body>
 </html>
