signature error fixed

--- a/templates/feedback_view.html
+++ b/templates/feedback_view.html
@@ -111,7 +111,7 @@
     </table>
 
     <div class="feedback3">        
-        <img src="{{ url_for('static', filename=signature) }}"  id = 'signature-img'alt="">
+        <img src="{{ signature }}"  id = 'signature-img'alt="">
         <br>
         <p id="signature">{{ student.name }}</p>
         <p id="signatureDate">{{ date }}</p>
