added department field to student

--- a/templates/feedback_view.html
+++ b/templates/feedback_view.html
@@ -21,8 +21,8 @@
         <tr>
             <td>Year</td>
             <td class="data" id="year">{{ internship.year }}</td>
-            <td>Branch</td>
-            <td class="data" id="branch">IT</td>
+            <td>Department</td>
+            <td class="data" id="branch">{{ student.department }}</td>
             <td>Mobile:</td>
             <td class="data"id="mobile">{{ report.std_mobile }}</td>
         </tr>
