--- a/templates/report_view.html
+++ b/templates/report_view.html
@@ -18,8 +18,8 @@
             <td class="data" id="nameOfStudent" colspan="4">{{ student.name }}</td>
         </tr>
         <tr>
-            <td>Class (While Internship is going on)</td>
-            <td class="data" id="class">IT</td>
+            <td>Department (While Internship is going on)</td>
+            <td class="data" id="class">{{ student.department }}</td>
             <td>Year of Internship</td>
             <td class="data" id="year">{{ internship.year }}</td>
             <td>Mobile:</td>
