--- a/templates/set_password.html
+++ b/templates/set_password.html
@@ -15,8 +15,13 @@
         <label for="">Set Your Password Here:</label>
         <input type="password" name="password">
 
+        <label for="department">Department:</label>
+        <input type="text" name="department">
+
         <label for="signature">Your Signature:</label>
         <input type="file" id="file" name="file" accept="image/*"><br>
+
+
 
         <input type="submit" value="Login">
     </form>
