modified department input as options to select from

--- a/templates/set_password.html
+++ b/templates/set_password.html
@@ -10,13 +10,18 @@
     <form action="{{ url_for('set_password') }}" method="post" enctype="multipart/form-data">
 
         <label for="username">Create a username:</label>
-        <input type="text" name="username" id="username">
+        <input type="text" name="username" id="username"><br>
 
         <label for="">Set Your Password Here:</label>
-        <input type="password" name="password">
+        <input type="password" name="password"><br>
 
         <label for="department">Department:</label>
-        <input type="text" name="department">
+        <select id="department" name="department">
+            <option value="Information Technology">Information Technology</option>
+            <option value="Computer Engineering">Computer Engineering</option>
+            <option value="Artificial Inteligience and Data Science">Artificial Inteligience and Data Science</option>
+            <option value="Mechanical Engineering">Mechanical Engineering</option>
+          </select><br>
 
         <label for="signature">Your Signature:</label>
         <input type="file" id="file" name="file" accept="image/*"><br>
