--- a/static/login.css
+++ b/static/login.css
@@ -6,7 +6,7 @@ form {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 50px;
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2),
         0 6px 20px 0 rgba(0, 0, 0, 0.19);
     width: 300px;
@@ -14,7 +14,12 @@ form {
     border-radius: 10px;
 
 }
-
+.logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 700px;
+}
 .content {
     display: flex;
     flex-direction: column;
