--- a/templates/feedbackInput.html
+++ b/templates/feedbackInput.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='feedbackInput.css') }}">
     <title>Feedback Form</title>
+    <style>
+             .logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 700px;
+}
+    </style>
 </head>
 <body>
+    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
+    
+    <p class="title">DEPARTMENT OF INFORMATION TECHNOLOGY</p>
     <h1>Feedback Form</h1>
 
     <form action="{{ url_for('feedback_form', internship_id = id) }}" method="post">
