--- a/templates/login.html
+++ b/templates/login.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="content">
+      <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
       <form action="{{ url_for('login') }}" method="post">
         <h1>Login</h1>
         <div class="fillups" id="fillup1">
