--- a/templates/register.html
+++ b/templates/register.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="content">
+    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
+
     <form action="{{ url_for('register') }}" method="post">
         <h1>Sign Up</h1>
         <input type="number" placeholder="Enter your PRN Number" name="prn_number" class="inputs">
