--- a/templates/request_internship.html
+++ b/templates/request_internship.html
@@ -76,13 +76,16 @@
                 <option value="TE">TE</option>
                 <option value="BE">BE</option>
               </select>
-            
-            
-            <label for="student_name">Name of Student:</label>
-            <input type="text" name="student_name" id="student_name" required>
-            
+        
             <label for="organization_name">Name Of Organization:</label>
-            <input type="text" name="organization_name" id="organization_name" required>
+            <select name="organization_list" id="organization_list">
+                <option value="" selected disabled>_</option>
+                {% for org in organizations %}
+                    <option value="{{ org }}">{{ org }}</option>
+                {% endfor %}
+            </select>
+            <input type="text" name="organization_name" id="organization_name" placeholder="Enter the name of your organization if not present in above list">
+
             
             <label for="duration">Duration:</label>
             <input type="number" name="duration" id="duration" required placeholder="in weeks">
@@ -94,7 +97,7 @@
             <input type="date" name="end_date" id="end_date" required>
             
             <label for="work_time">Work-Time:</label>
-            <input type="text" name="work_time" id="work_time" required placeholder="HH:MM am - HH:MM pm">
+            <input type="time" name="work_time_1" id="work_time_1" required> to <input type="time" name="work_time_2" id="work_time_2" required>
             
             <label for="days">Select Working Days:</label>
             <ul>
@@ -110,27 +113,7 @@
         </form>
     </div>
 
-       <!-- Include the Toastr library JS file -->
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-
-       <script>
-           // JavaScript code to validate the date range
-           document.getElementById("date-form").onsubmit = function (e) {
-               e.preventDefault();
-   
-               const startDate = new Date(document.getElementById("start_date").value);
-               const endDate = new Date(document.getElementById("end_date").value);
-   
-               if (startDate >= endDate) {
-                   // Display a toast message
-                   toastr.error("Start date should be less than end date", "Date Range Error");
-               }
-               else {
-                // Submit the form if the condition is met
-                this.submit();
-            }
-           };
-       </script>
+       
    
 </body>
 </html>
