added instructions for time input

--- a/templates/request_internship.html
+++ b/templates/request_internship.html
@@ -96,7 +96,7 @@
             <label for="end_date">End Date:</label>
             <input type="date" name="end_date" id="end_date" required>
             
-            <label for="work_time">Work-Time:</label>
+            <label for="work_time">Work-Time (in 24 hours format):</label>
             <input type="time" name="work_time_1" id="work_time_1" required> to <input type="time" name="work_time_2" id="work_time_2" required>
             
             <label for="days">Select Working Days:</label>
