report link created

--- a/templates/incharge_dashboard.html
+++ b/templates/incharge_dashboard.html
@@ -16,6 +16,11 @@
 </head>
 <body>
     <h1>Incharge Dashboard</h1>
+    <nav>
+        <ul>
+            <li><a href="{{ url_for('reports_view') }}">Reports</a></li>
+        </ul>
+    </nav>
 
     <h3>Pending Requests</h3>
 
