--- a/templates/reports-view.html
+++ b/templates/reports-view.html
@@ -6,12 +6,12 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <div style="width: 80%;">
+    <div style="width: 60%;">
         <canvas id="myChart"></canvas>
     </div>
     
     <script>
-        fetch('/get_data')
+        fetch('/get_internship_data')
             .then(response => response.json())
             .then(data => {
                 var ctx = document.getElementById('myChart').getContext('2d');
@@ -26,7 +26,18 @@
                             borderColor: 'rgba(75, 192, 192, 1)',
                             borderWidth: 1
                         }]
-                    }
+                    },
+                    options: {
+        scales: {
+            y: {
+                beginAtZero: true, 
+                ticks: {
+                    stepSize: 7, 
+                    min: 0, 
+                }
+            }
+        }
+    }
                 });
             });
     </script>
