modified incharge dashboard

--- a/templates/reports-view.html
+++ b/templates/reports-view.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Graph Example</title>
+    <title>Accademic Year Report</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+    <h1>Accademic Year</h1>
     <div style="width: 60%;">
         <canvas id="myChart"></canvas>
     </div>
@@ -32,7 +33,7 @@
             y: {
                 beginAtZero: true, 
                 ticks: {
-                    stepSize: 7, 
+                    stepSize: 1, 
                     min: 0, 
                 }
             }
