--- a/templates/incharge_dashboard.html
+++ b/templates/incharge_dashboard.html
@@ -16,11 +16,6 @@
 </head>
 <body>
     <h1>Incharge Dashboard</h1>
-    <nav>
-        <ul>
-            <li><a href="{{ url_for('accademic_year_reports_view') }}">Reports</a></li>
-        </ul>
-    </nav>
 
     <h3>Pending Requests</h3>
 
@@ -48,7 +43,7 @@
             <td>{{ item.internship.days }}</td>
             <td>{{ item.internship.work_time }}</td>
             <td>{{ item.internship.status }}</td>
-            <td><a href="{{ url_for('view_internship', internship_id = item.internship.internship_id) }}">view</a></td>
+            <td><a href="{{ url_for('incharge.view_internship', internship_id = item.internship.internship_id) }}">view</a></td>
         </tr>     
         
         {% endif %}
@@ -79,7 +74,7 @@
             <td>{{ item.internship.days }}</td>
             <td>{{ item.internship.work_time }}</td>
             <td>{{ item.internship.status }}</td>
-            <td><a href="{{ url_for('view_internship', internship_id = item.internship.internship_id) }}">view</a></td>
+            <td><a href="{{ url_for('incharge.view_internship', internship_id = item.internship.internship_id) }}">view</a></td>
         </tr>
         {% endif %}
         {% endfor %}
@@ -112,7 +107,7 @@
             <td>{{ item.internship.days }}</td>
             <td>{{ item.internship.work_time }}</td>
             <td>{{ item.internship.status }}</td>
-            <td><a href="{{ url_for('view_internship', internship_id = item.internship.internship_id) }}">view</a></td>
+            <td><a href="{{ url_for('incharge.view_internship', internship_id = item.internship.internship_id) }}">view</a></td>
         </tr>
         {% endif %}
         {% endfor %}
