--- a/templates/request_internship.html
+++ b/templates/request_internship.html
@@ -65,7 +65,7 @@
 <>
     <h1>Internship Request Form</h1>
     <div class="form-container">
-        <form action="{{ url_for('add_new_internship') }}" id="date-form" method="post">
+        <form action="{{ url_for('student.add_new_internship') }}" id="date-form" method="post">
             <label for="academic_year">Academic Year:</label>
             <input type="text" name="academic_year" id="academic_year" required placeholder="YYYY-YYYY"
             
