--- a/templates/request_internship.html
+++ b/templates/request_internship.html
@@ -86,6 +86,11 @@
             </select>
             <input type="text" name="organization_name" id="organization_name" placeholder="Enter the name of your organization if not present in above list">
 
+            <label for="">Select Internship Type:</label>
+            <select name="internship_type" id="internship_type">
+                <option value="in-house">In-house</option>
+                <option value="Out-house">Out-house</option>
+            </select>
             
             <label for="duration">Duration:</label>
             <input type="number" name="duration" id="duration" required placeholder="in weeks">
