--- a/templates/feedbackInput.html
+++ b/templates/feedbackInput.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Feedback Form</h1>
 
-    <form action="{{ url_for('feedback_form', internship_id = id) }}" method="post">
+    <form action="{{ url_for('student.feedback_form', internship_id = id) }}" method="post">
 
         <p>Scale for the questionnaire given below:</p>
         <ul>
