--- a/templates/upload_certificate.html
+++ b/templates/upload_certificate.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="{{ url_for('upload_certificate',internship_id = id) }}" enctype="multipart/form-data" method="post" >
+    <form action="{{ url_for('student.upload_certificate',internship_id = id) }}" enctype="multipart/form-data" method="post" >
         <label for="file">Completion Certificate</label>
         <input type="file"  name="file" accept=".pdf, .doc, .docx">
         <input type="submit" value="Submit">
