--- a/templates/last-three-years.html
+++ b/templates/last-three-years.html
@@ -6,8 +6,29 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Last 3 Years Report</h3>
+    <h3>Yearly Report</h3>
     <div id="bar-chart"></div>
+    <table>
+        <thead>
+        <tr>
+        <th>Accademic Year</th>
+        <th>Name Of Student</th>
+        <th>Class</th>
+        <th>Organization</th>
+    </tr>
+</thead>
+<tbody>
+    {% for item in data %}
+        <tr>
+        <td>{{ item.year }}</td>
+        <td>{{ item.name }}</td>
+        <td>{{ item.class }}</td>
+        <td>{{ item.organization }}</td>
+        <td><a href="{{ url_for('incharge.view_internship', internship_id = item.id) }}">View</a></td>
+        </tr>
+        {% endfor %}
+    </tbody>
+    </table>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
@@ -30,7 +51,7 @@
                     var data = [trace];
 
                     var layout = {
-                        title: 'Company Revenue Bar Chart',
+                        title: 'Last Three Years Internship Report',
                         xaxis: {title: 'Years'},
                         tickvals: [0, 1, 2, 3],
                         yaxis: {title: 'Students'},
