--- a/templates/incharge_dashboard.html
+++ b/templates/incharge_dashboard.html
@@ -4,22 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        table{
-            border: 1px solid black;
-            border-collapse: collapse;
-        }
-        th, td{
-            border: 1px solid black;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'incharge_dashboard.css') }}">
 </head>
 <body>
     <h1>Incharge Dashboard</h1>
     <nav>
-        <ul>
+        <ul class="menu">
             <li><a href="{{ url_for('incharge.incharge_dashboard') }}">Requests</a></li>
-            <li><a href="{{ url_for('report.report_nav' )}}">Reports</a></li>
+            <li class="reports-nav">
+                <a href="{{ url_for('report.report_nav' )}}" >Reports</a>
+                <ul class="sub-menu-1">
+                    <li>
+                        <a href="{{ url_for('report.last_three_years') }}">Accademic Year</a>
+                    </li>
+                    <li>
+                       <a href="">Last Three Years</a>
+                    </li>
+                    <li >
+                         <a href="" class="internship-types-nav">Internship Types</a>
+                        <ul class="sub-menu-2">
+                            <li>In-House</li>
+                            <li>Out-House</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#" class="summary-nav">Summary</a> 
+                        <ul class="sub-menu-3">
+                            <li>Yearly</li>
+                            <li>Student</li>
+                            <li>Company</li>
+                        </ul>
+
+                    </li>
+
+                </ul>
+            </li>
         </ul>
     </nav>
     <h3>Pending Requests</h3>
