--- a/templates/upload_certificate.html
+++ b/templates/upload_certificate.html
@@ -44,7 +44,7 @@ form{
 
     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="no img found" class="logo">
 
-    <form action="{{ url_for('upload_certificate',internship_id = id) }}" enctype="multipart/form-data" method="post" >
+    <form action="{{ url_for('student.upload_certificate',internship_id = id) }}" enctype="multipart/form-data" method="post" >
         <div>
         <label for="file" style="font-size: 25px;font-weight:600;">Completion Certificate :</label>
         <input type="file"  name="file" accept=".pdf, .doc, .docx" style="font-size: 15px; margin-left: 20px;">
